cpp01 complete/makefile edit

--- a/cpp01/ex00/Makefile
+++ b/cpp01/ex00/Makefile
@@ -1,10 +1,10 @@
-NAME = account
+NAME = zombie
 
 CC = c++
 
 FLAG = -Wall -Wextra -Werror --std=c++98
 
-SRCS = Account.cpp test.cpp
+SRCS = main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
