--- a/cpp01/ex03/Makefile
+++ b/cpp01/ex03/Makefile
@@ -1,10 +1,10 @@
-NAME = account
+NAME = weapon
 
 CC = c++
 
 FLAG = -Wall -Wextra -Werror --std=c++98
 
-SRCS = Account.cpp test.cpp
+SRCS = main.cpp Weapon.cpp HumanA.cpp HumanB.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
