--- a/cpp02/ex03/Makefile
+++ b/cpp02/ex03/Makefile
@@ -4,7 +4,7 @@ CC = c++
 
 FLAG = -Wall -Wextra -Werror --std=c++98
 
-SRCS = main.cpp Fixed.cpp
+SRCS = main.cpp Fixed.cpp Point.cpp bsp.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
