--- a/cpp03/ex02/Makefile
+++ b/cpp03/ex02/Makefile
@@ -4,7 +4,7 @@ CC = c++
 
 FLAG = -Wall -Wextra -Werror --std=c++98
 
-SRCS = main.cpp ClapTrap.cpp
+SRCS = main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
