--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,11 @@
 		"fstream": "cpp",
 		"deque": "cpp",
 		"iomanip": "cpp",
-		"stack": "cpp"
+		"stack": "cpp",
+		"__bits": "cpp",
+		"clocale": "cpp",
+		"compare": "cpp",
+		"concepts": "cpp",
+		"variant": "cpp"
 	}
 }
