--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,8 @@
 		"compare": "cpp",
 		"concepts": "cpp",
 		"variant": "cpp",
-		"filesystem": "cpp"
-	}
+		"filesystem": "cpp",
+		"*.tpp": "cpp"
+	},
+	"C_Cpp.errorSquiggles": "Disabled"
 }
