cpp08 start/cpp07 edit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,7 +70,8 @@
 		"concepts": "cpp",
 		"variant": "cpp",
 		"filesystem": "cpp",
-		"*.tpp": "cpp"
+		"*.tpp": "cpp",
+		"list": "cpp"
 	},
 	"C_Cpp.errorSquiggles": "Disabled"
 }
